public class Main {
	static void main(String[] args) {
		StreamingService service = new StreamingService();
		service.startSession();
		service.runSession();
		service.endSession();

	}
}
