public interface Menu {
    void showOptions();

}