import java.util.ArrayList;


public class Movie extends Media{
    public Movie(String name, int releaseYear, ArrayList<Category> categories, double rating) {
        super(name, releaseYear, categories, rating);
    }
    
}
