@startuml
'https://plantuml.com/class-diagram

class Main{
    static void main(String[] args)
}

class StreamingService {
    String name
    User currentUser
    ArrayList<Movie> movies
    ArrayList<Series> series
    StreamingService (String name, ArrayList<Movie> movies, ArrayList<Series> series)
    void startSession()
    void loadMedia()
    void saveData()
    void endSession()
}

class User {
    StreamingService service
    String userName
    String password
    ArrayList<Media> watchedList
    ArrayList<Media> watchLaterList
    User (StreamingService service, String userName, String password)
    void showMenu()
    saveWatchedToFile()
    saveWatchLaterToFile()
    addToWatchLater()
    removeFromWatchLater()
    addToWatched()
}

class Admin {
    static final boolean isAdmin = true
    Admin (String userName, String password)
    void showMenu()
}

abstract class Media{
    String name
    int releaseYear
    Category[] categories
    double rating
    Media (String name, int releaseYear, Category[] categories, double rating)
    String toCsv()
}

class Movie{
    Movie (String name, int releaseYear, Category[] categories, double rating)
}

class Series{
    int endYear
    ArrayList<Season> seasons
    Series (String name, int releaseYear, int endYear, Category[] categories, double rating, ArrayList<Season> seasons)
}

enum Category

class Season{
    int numberOfEpisodes
    Season (int numberOfEpisodes)
}

interface Menu{
    void showOptions()
}

class UserMenu {
    UserMenu()
    void showOptions()
    Media searchMedia()
    void searchAllinCategory()
    void showWatched()
    void showWatchLater()
}

class StartMenu{
    StartMenu()
    void showOptions()
    void createUser()
    void loginUser()
}

class AdminMenu {
    AdminMenu()
    void addMedia()
    void removeMedia()
}

class MediaMenu {
    Media selectedMedia
    StreamingService service
    MediaMenu(StreamingService servuce, Media media)
    void showOptions()
    void playMedia() //adds to watchedList
    void addWatchLater()
    void removeWatchLater()
}

Main *-- StreamingService
StreamingService *-- User
StreamingService *-- StartMenu
StreamingService *-- Media
Menu <|-- UserMenu
Menu <|-- StartMenu
Menu <|-- MediaMenu
User <|-- Admin
User *-- UserMenu
Admin *-- AdminMenu
UserMenu <|-- AdminMenu
Media *-- MediaMenu
Media <|-- Movie
Media <|-- Series
Media *.. Category
Series *-- Season
@enduml